k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-deployment
  namespace: kiii-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiii
  template:
    metadata:
      labels:
        app: kiii
    spec:
      containers:
        - name: kiii
          image: todormitevski/kiii-project:latest
          ports:
            - containerPort: 8080
