k8s/deployment-service-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-deploy
  namespace: events-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          image: todormitevski/kiii-project:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: events-ns
spec:
  selector:
    app: events
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
