k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-service
  namespace: kiii-namespace
spec:
  selector:
    app: kiii
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
