k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: kiii-namespace
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
